[package]
name = "request-test"
version = "0.1.0"
authors = ["shawn <yu.zhang@jian24.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=0.2.0-alpha.6", features = ["io", "tcp", "timer"] }
futures = "*"
clap = "2.33"
prettytable-rs = "0.8"